tests/snapshots/snapshots__budget_commander_lib_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4146 tokens)

argument.js
     3→class Argument {
     5→   * Initialize a new command argument with the given name and description.
     6→   * The default is that the argument is required, and you can explicitly
     7→   * indicate this with <> around the name. Put [] around the name for an optional argument.
     8→   *
     9→   * @param {string} name
    10→   * @param {string} [description]
    13→  constructor(name, description) {
    14→    this.description = description || '';
      →    …
    43→   * Return argument name.
    44→   *
    45→   * @return {string}
    48→  name() {
    49→    return this._name;
      →    …
    56→  _collectValue(value, previous) {
    66→   * Set the default value, and optionally supply the description to be displayed in the help.
    67→   *
    68→   * @param {*} value
    69→   * @param {string} [description]
    70→   * @return {Argument}
    73→  default(value, description) {
    74→    this.defaultValue = value;
      →    …
    80→   * Set the custom handler for processing CLI command arguments into argument values.
    81→   *
    82→   * @param {Function} [fn]
    83→   * @return {Argument}
    86→  argParser(fn) {
    87→    this.parseArg = fn;
      →    …
    92→   * Only allow argument value to be one of choices.
    93→   *
    94→   * @param {string[]} values
    95→   * @return {Argument}
    98→  choices(values) {
    99→    this.argChoices = values.slice();
      →    …
   115→   * Make argument required.
   116→   *
   117→   * @returns {Argument}
   119→  argRequired() {
   120→    this.required = true;
      →    …
   125→   * Make argument optional.
   126→   *
   127→   * @returns {Argument}
   129→  argOptional() {
   130→    this.required = false;
      →    …
   143→function humanReadableArgName(arg) {

command.js
    13→class Command extends EventEmitter {
    20→  constructor(name) {
    99→  copyInheritedSettings(sourceCommand) {
   121→  _getCommandAndAncestors() {
   155→  command(nameAndArgs, actionOptsOrExecDesc, execOpts) {
   192→  createCommand(name) {
   203→  createHelp() {
   215→  configureHelp(configuration) {
   245→  configureOutput(configuration) {
   261→  showHelpAfterError(displayHelp = true) {
   273→  showSuggestionAfterError(displaySuggestion = true) {
   288→  addCommand(cmd, opts) {
   316→  createArgument(name, description) {
   336→  argument(name, description, parseArg, defaultValue) {
   359→  arguments(names) {
   375→  addArgument(argument) {
   409→  helpCommand(enableOrNameAndArgs, description) {
   443→  addHelpCommand(helpCommand, deprecatedDescription) {
   463→  _getHelpCommand() {
   487→  hook(event, listener) {
   502→   * Register callback to use as replacement for calling process.exit.
      →   …
   508→  exitOverride(fn) {
   533→  _exit(exitCode, code, message) {
   542→   * Register callback `fn` for the command.
      →   …
   556→  action(fn) {
   575→   * Factory routine to create a new unattached option.
      →   …
   585→  createOption(flags, description) {
   599→  _callParseArg(target, value, previous, invalidArgumentMessage) {
   619→  _registerOption(option) {
   644→  _registerCommand(command) {
   665→   * Add an option.
      →   …
   670→  addOption(option) {
   741→  _optionEx(config, flags, description, fn, defaultValue) {
   767→   * Define option with `flags`, `description`, and optional argument parsing function or `defaultValue` or both.
      →   …
   788→  option(flags, description, parseArg, defaultValue) {
   793→   * Add a required option which must have a value after parsing. This usually means
      →   …
   805→  requiredOption(flags, description, parseArg, defaultValue) {
   816→   * Alter parsing of short flags with optional values.
      →   …
   826→  combineFlagAndOptionalValue(combine = true) {
   832→   * Allow unknown options on the command line.
      →   …
   837→  allowUnknownOption(allowUnknown = true) {
   843→   * Allow excess command-arguments on the command line. Pass false to make excess arguments an error.
      →   …
   848→  allowExcessArguments(allowExcess = true) {
   854→   * Enable positional options. Positional means global options are specified before subcommands which lets
      →   …
   861→  enablePositionalOptions(positional = true) {
   867→   * Pass through options that come after command-arguments rather than treat them as command-options,
      →   …
   875→  passThroughOptions(passThrough = true) {
   885→  _checkForBrokenPassThrough() {
   898→   * Whether to store option values as properties on command object,
      →   …
   905→  storeOptionsAsProperties(storeAsProperties = true) {
   919→   * Retrieve option value.
      →   …
   925→  getOptionValue(key) {
   933→   * Store option value.
      →   …
   940→  setOptionValue(key, value) {
   945→   * Store option value and where the value came from.
      →   …
   953→  setOptionValueWithSource(key, value, source) {
   964→   * Get source of option value.
      →   …
   971→  getOptionValueSource(key) {
   983→  getOptionValueSourceWithGlobals(key) {
  1001→  _prepareUserArgs(argv, parseOptions) {
  1090→  parse(argv, parseOptions) {
  1119→  async parseAsync(argv, parseOptions) {
  1127→  _prepareForParse() {
  1141→  saveStateBeforeParse() {
  1158→  restoreStateBeforeParse() {
  1183→  _checkForMissingExecutable(executableFile, executableDir, subcommandName) {
  1202→  _executeSubCommand(subcommand, args) {
  1352→  _dispatchSubcommand(commandName, operands, unknown) {
  1380→  _dispatchHelpCommand(subcommandName) {
  1403→  _checkNumberOfArguments() {
  1428→  _processArguments() {
  1481→  _chainOrCall(promise, fn) {
  1499→  _chainOrCallHooks(promise, event) {
  1531→  _chainOrCallSubCommandHook(promise, subCommand, event) {
  1550→  _parseCommand(operands, unknown) {
  1649→  _findCommand(name) {
  1664→  _findOption(arg) {
  1675→  _checkForMissingMandatoryOptions() {
  1694→  _checkForConflictingLocalOptions() {
  1723→  _checkForConflictingOptions() {
  1748→  parseOptions(args) {
  1902→  opts() {
  1924→  optsWithGlobals() {
  1940→  error(message, errorOptions) {
  1966→  _parseOptionsEnv() {
  1996→  _parseOptionsImplied() {
  2034→  missingArgument(name) {
  2046→  optionMissingArgument(option) {
  2058→  missingMandatoryOptionValue(option) {
  2070→  _conflictingOption(option, conflictingOption) {
  2114→  unknownOption(flag) {
  2146→  _excessArguments(receivedArgs) {
  2162→  unknownCommand() {
  2195→  version(str, flags, description) {
  2218→  description(str, argsDescription) {
  2234→  summary(str) {
  2249→  alias(alias) {
  2289→  aliases(aliases) {
  2304→  usage(str) {
  2331→  name(str) {
  2344→  helpGroup(heading) {
  2363→  commandsGroup(heading) {
  2382→  optionsGroup(heading) {
  2392→  _initOptionGroup(option) {
  2401→  _initCommandGroup(cmd) {
  2419→  nameFromFilename(filename) {
  2437→  executableDir(path) {
  2450→  helpInformation(contextOptions) {
  2475→  _getOutputContext(contextOptions) {
  2505→  outputHelp(contextOptions) {
  2559→  helpOption(flags, description) {
  2592→  _getHelpOption() {
  2607→  addHelpOption(option) {
  2621→  help(contextOptions) {
  2656→  addHelpText(position, text) {
  2686→  _outputHelpIfRequested(args) {
  2705→function incrementNodeInspectorPort(args) {
  2752→function useColor() {

error.js
     4→class CommanderError extends Error {
     6→   * Constructs the CommanderError class
     7→   * @param {number} exitCode suggested exit code which could be used with process.exit
     8→   * @param {string} code an id string representing the error
     9→   * @param {string} message human-readable description of the error
    11→  constructor(exitCode, code, message) {
    12→    super(message);
    13→    // properly capture stack trace in Node.js
    14→    Error.captureStackTrace(this, this.constructor);
    15→    this.name = this.constructor.name;
    16→    this.code = code;
    17→    this.exitCode = exitCode;
    18→    this.nestedError = undefined;
    19→  }
    25→class InvalidArgumentError extends CommanderError {
    27→   * Constructs the InvalidArgumentError class
    28→   * @param {string} [message] explanation of why argument is invalid
    30→  constructor(message) {
    31→    super(1, 'commander.invalidArgument', message);
    32→    // properly capture stack trace in Node.js
    33→    Error.captureStackTrace(this, this.constructor);
    34→    this.name = this.constructor.name;
    35→  }

help.js
    12→class Help {
    13→  constructor() {
    22→   * prepareContext is called by Commander after applying overrides from `Command.configureHelp()`
    23→   * and just before calling `formatHelp()`.
      →   …
    29→  prepareContext(contextOptions) {
    34→   * Get an array of the visible subcommands. Includes a placeholder for the implicit help command, if there is one.
    35→   *
      →   …
    40→  visibleCommands(cmd) {
    56→   * Compare options for sort.
    57→   *
      →   …
    62→  compareOptions(a, b) {
    73→   * Get an array of the visible options. Includes a placeholder for the implicit help option, if there is one.
    74→   *
      →   …
    79→  visibleOptions(cmd) {
   106→   * Get an array of the visible global options. (Not including help.)
   107→   *
      →   …
   112→  visibleGlobalOptions(cmd) {
   133→   * Get an array of the arguments if any have a description.
   134→   *
      →   …
   139→  visibleArguments(cmd) {
   156→   * Get the command term to show in the list of subcommands.
   157→   *
      →   …
   162→  subcommandTerm(cmd) {
   176→   * Get the option term to show in the list of options.
   177→   *
      →   …
   182→  optionTerm(option) {
   187→   * Get the argument term to show in the list of arguments.
   188→   *
      →   …
   193→  argumentTerm(argument) {
   198→   * Get the longest command term length.
   199→   *
      →   …
   205→  longestSubcommandTermLength(cmd, helper) {
   217→   * Get the longest option term length.
   218→   *
      →   …
   224→  longestOptionTermLength(cmd, helper) {
   234→   * Get the longest global option term length.
   235→   *
      →   …
   241→  longestGlobalOptionTermLength(cmd, helper) {
   251→   * Get the longest argument term length.
   252→   *
      →   …
   258→  longestArgumentTermLength(cmd, helper) {
   270→   * Get the command usage to be displayed at the top of the built-in help.
   271→   *
      →   …
   276→  commandUsage(cmd) {
   294→   * Get the description for the command.
   295→   *
      →   …
   300→  commandDescription(cmd) {
   306→   * Get the subcommand summary to show in the list of subcommands.
   307→   * (Fallback to description for backwards compatibility.)
      →   …
   313→  subcommandDescription(cmd) {
   319→   * Get the option description to show in the list of options.
   320→   *
      →   …
   325→  optionDescription(option) {
   366→   * Get the argument description to show in the list of arguments.
   367→   *
      →   …
   372→  argumentDescription(argument) {
   396→   * Format a list of items, given a heading and an array of formatted items.
   397→   *
      →   …
   403→  formatItemList(heading, items, helper) {
   410→   * Group items by their help group heading.
   411→   *
      →   …
   417→  groupItems(unsortedItems, visibleItems, getGroup) {
   436→   * Generate the built-in help text.
   437→   *
      →   …
   443→  formatHelp(cmd, helper) {
   530→   * Return display width of string, ignoring ANSI escape sequences. Used in padding and wrapping calculations.
   531→   *
      →   …
   535→  displayWidth(str) {
   540→   * Style the title for displaying in the help. Called with 'Usage:', 'Options:', etc.
   541→   *
      →   …
   545→  styleTitle(str) {
   549→  styleUsage(str) {
   563→  styleCommandDescription(str) {
   566→  styleOptionDescription(str) {
   569→  styleSubcommandDescription(str) {
   572→  styleArgumentDescription(str) {
   575→  styleDescriptionText(str) {
   578→  styleOptionTerm(str) {
   581→  styleSubcommandTerm(str) {
   594→  styleArgumentTerm(str) {
   597→  styleOptionText(str) {
   600→  styleArgumentText(str) {
   603→  styleSubcommandText(str) {
   606→  styleCommandText(str) {
   611→   * Calculate the pad width from the maximum term length.
   612→   *
      →   …
   618→  padWidth(cmd, helper) {
   628→   * Detect manually wrapped and indented strings by checking for line break followed by whitespace.
   629→   *
      →   …
   633→  preformatted(str) {
   638→   * Format the "item", which consists of a term and description. Pad the term and wrap the description, indenting the following lines.
   639→   *
      →   …
   650→  formatItem(term, termWidth, description, helper) {
   688→   * Wrap a string at whitespace, preserving existing line breaks.
   689→   * Wrapping is skipped if the width is less than `minWidthToWrap`.
      →   …
   695→  boxWrap(str, width) {
   740→function stripColor(str) {

option.js
     3→class Option {
    11→  constructor(flags, description) {
    47→  default(value, description) {
    65→  preset(arg) {
    82→  conflicts(names) {
   100→  implies(impliedOptionValues) {
   120→  env(name) {
   132→  argParser(fn) {
   144→  makeOptionMandatory(mandatory = true) {
   156→  hideHelp(hide = true) {
   165→  _collectValue(value, previous) {
   181→  choices(values) {
   203→  name() {
   217→  attributeName() {
   230→  helpGroup(heading) {
   243→  is(arg) {
   256→  isBoolean() {
   268→class DualOptions {
   272→  constructor(options) {
   297→  valueFromOption(value, option) {
   316→function camelcase(str) {
   328→function splitOptionFlags(flags) {

suggestSimilar.js
     1→const maxDistance = 3;
     3→function editDistance(a, b) {
    49→ * Find close matches, restricted to same number of edits.
    50→ *
    51→ * @param {string} word
      → …
    56→function suggestSimilar(word, candidates) {
