tests/snapshots/snapshots__budget_commander_lib_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (505 words)

argument.js
     3→class Argument {
     4→  /**
   135→/**
      →…
   143→function humanReadableArgName(arg) {
command.js
    13→class Command extends EventEmitter {
    14→  /**
  1127→  _prepareForParse() {
  2697→/**
      →…
  2705→function incrementNodeInspectorPort(args) {
  2748→/**
      →…
  2752→function useColor() {
error.js
     1→/**
     2→ * CommanderError class
     3→ */
     4→class CommanderError extends Error {
     5→  /**
     6→   * Constructs the CommanderError class
     7→   * @param {number} exitCode suggested exit code which could be used with process.exit
     8→   * @param {string} code an id string representing the error
     9→   * @param {string} message human-readable description of the error
    10→   */
    11→  constructor(exitCode, code, message) {
    12→    super(message);
    13→    // properly capture stack trace in Node.js
    14→    Error.captureStackTrace(this, this.constructor);
    15→    this.name = this.constructor.name;
    16→    this.code = code;
    17→    this.exitCode = exitCode;
    18→    this.nestedError = undefined;
    19→  }
    20→}
    22→/**
    23→ * InvalidArgumentError class
    24→ */
    25→class InvalidArgumentError extends CommanderError {
    26→  /**
    27→   * Constructs the InvalidArgumentError class
    28→   * @param {string} [message] explanation of why argument is invalid
    29→   */
    30→  constructor(message) {
    31→    super(1, 'commander.invalidArgument', message);
    32→    // properly capture stack trace in Node.js
    33→    Error.captureStackTrace(this, this.constructor);
    34→    this.name = this.constructor.name;
    35→  }
    36→}
help.js
    12→class Help {
    13→  constructor() {
   549→  styleUsage(str) {
   563→  styleCommandDescription(str) {
   566→  styleOptionDescription(str) {
   569→  styleSubcommandDescription(str) {
   572→  styleArgumentDescription(str) {
   575→  styleDescriptionText(str) {
   578→  styleOptionTerm(str) {
   581→  styleSubcommandTerm(str) {
   594→  styleArgumentTerm(str) {
   597→  styleOptionText(str) {
   600→  styleArgumentText(str) {
   603→  styleSubcommandText(str) {
   606→  styleCommandText(str) {
   732→/**
      →…
   740→function stripColor(str) {
option.js
     3→class Option {
     4→  /**
   261→/**
   262→ * This class is to make it easier to work with dual options, without changing the existing
   263→ * implementation. We support separate dual options for separate positive and negative options,
   264→ * like `--build` and `--no-build`, which share a single option value. This works nicely for some
   265→ * use cases, but is tricky for others where we want separate behaviours despite
   266→ * the single shared option value.
   267→ */
   268→class DualOptions {
   269→  /**
   270→   * @param {Option[]} options
   271→   */
   272→  constructor(options) {
   273→    this.positiveOptions = new Map();
   274→    this.negativeOptions = new Map();
   275→    this.dualOptions = new Set();
   276→    options.forEach((option) => {
   277→      if (option.negate) {
   278→        this.negativeOptions.set(option.attributeName(), option);
   279→      } else {
   280→        this.positiveOptions.set(option.attributeName(), option);
   281→      }
   282→    });
   283→    this.negativeOptions.forEach((value, key) => {
   284→      if (this.positiveOptions.has(key)) {
   285→        this.dualOptions.add(key);
   286→      }
   287→    });
   288→  }
   289→
   290→  /**
   291→   * Did the value come from the option, and not from possible matching dual option?
   292→   *
   293→   * @param {*} value
   294→   * @param {Option} option
   295→   * @returns {boolean}
   296→   */
   297→  valueFromOption(value, option) {
   298→    const optionKey = option.attributeName();
   299→    if (!this.dualOptions.has(optionKey)) return true;
   300→
   301→    // Use the value to deduce if (probably) came from the option.
   302→    const preset = this.negativeOptions.get(optionKey).presetArg;
   303→    const negativeValue = preset !== undefined ? preset : false;
   304→    return option.negate === (negativeValue === value);
   305→  }
   306→}
   308→/**
      →…
   316→function camelcase(str) {
   322→/**
      →…
   328→function splitOptionFlags(flags) {
suggestSimilar.js
     1→const maxDistance = 3;
     3→function editDistance(a, b) {
     4→  // https://en.wikipedia.org/wiki/Damerau–Levenshtein_distance
      →…
    48→/**
      →…
    56→function suggestSimilar(word, candidates) {
