tests/snapshots/snapshots__budget_commander_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 30 → level 0 (27 words)

CHANGELOG.md
CONTRIBUTING.md
Readme.md
Readme_zh-CN.md
SECURITY.md
docs/deprecated.md
docs/help-in-depth.md
docs/options-in-depth.md
docs/parsing-and-hooks.md
docs/release-policy.md
docs/terminology.md
docs/zh-CN/不再推荐使用的功能.md
docs/zh-CN/可变参数的选项.md
docs/zh-CN/术语表.md
eslint.config.js
esm.mjs
index.js
jest.config.js
lib/argument.js
lib/command.js
lib/error.js
lib/help.js
lib/option.js
lib/suggestSimilar.js
typings/esm.d.mts
typings/index.d.ts
typings/index.test-d.ts
